# Sagarmatha

./: AUTHORS  Makefile.am  NEWS  README  README.md  configure.ac  generate_additional_files.py  makepot  restore  sagarmatha.pot  test
data/: Makefile.am  org.sagarmatha.gschema.xml.in  sagarmatha.desktop.in.in  sagarmatha.schemas
data/theme/: sagarmatha.css
debian/: README.Debian  changelog  control  rules  sagarmatha-common.install  sagarmatha.gsettings-override  sagarmatha.lintian-overrides
doc/: README.md  create-doc.py
files/: generate_desktop_files
files/etc/xdg/menus/: sagarmatha-applications.menu
files/usr/lib/sagarmatha-desktop-editor/: sagarmatha-desktop-editor.py
files/usr/lib/sagarmatha-json-makepot/: sagarmatha-json-makepot.py
files/usr/lib/sagarmatha-looking-glass/: lookingglass_proxy.py  page_inspect.py  page_results.py  page_windows.py  sagarmatha-looking-glass.py
files/usr/lib/sagarmatha-menu-editor/cme/: MainWindow.py  MenuEditor.py  config.py
files/usr/lib/sagarmatha-screensaver-lock-dialog/: sagarmatha-screensaver-lock-dialog.py
files/usr/lib/sagarmatha-settings/: sagarmatha-settings.py
files/usr/lib/sagarmatha-settings-users/: sagarmatha-settings-users.py
files/usr/lib/sagarmatha-settings/data/spices/: applet-detail.html
files/usr/lib/sagarmatha-settings/data/summit/: applet-detail.html
files/usr/lib/sagarmatha-settings/modules/: cs_backgrounds.py  cs_calendar.py  cs_default.py  cs_desklets.py  cs_effects.py  cs_extensions.py  cs_fonts.py  cs_general.py  cs_hotcorner.py  cs_info.py  cs_keyboard.py  cs_mouse.py  cs_panel.py  cs_screensaver.py  cs_themes.py  cs_tiling.py  cs_user.py  cs_windows.py  cs_workspaces.py
files/usr/share/applications/: sagarmatha-add-panel-launcher.desktop  sagarmatha-menu-editor.desktop  sagarmatha-settings-users.desktop  sagarmatha-settings.desktop  sagarmatha2d.desktop
files/usr/share/desktop-directories/: sagarmatha-c.directory  sagarmatha-look-and-feel.directory
files/usr/share/sagarmatha-session/sessions/: sagarmatha.session  sagarmatha2d.session
files/usr/share/sagarmatha/applets/WindowListGroup@jake.phy@gmail.com/: applet.js  configure.py  metadata.json  org.sagarmatha.applets.windowListGroup.gschema.xml  specialButtons.js  specialMenus.js
files/usr/share/sagarmatha/applets/a11y@sagarmatha.org/: applet.js  metadata.json
files/usr/share/sagarmatha/applets/brightness@sagarmatha.org/: applet.js  metadata.json
files/usr/share/sagarmatha/applets/calendar@sagarmatha.org/: applet.js  calendar.js  metadata.json
files/usr/share/sagarmatha/applets/capture@sagarmatha.org/: applet.js  metadata.json  screenshot.js  settings-schema.json  settings.json  settings.py  settings.ui  support.json
files/usr/share/sagarmatha/applets/expo@sagarmatha.org/: applet.js  metadata.json
files/usr/share/sagarmatha/applets/force-quit@sagarmatha.org/: applet.js  metadata.json
files/usr/share/sagarmatha/applets/keyboard@sagarmatha.org/: applet.js  metadata.json
files/usr/share/sagarmatha/applets/menu@sagarmatha.org/: applet.js  metadata.json  settings-schema.json  stylesheet.css
files/usr/share/sagarmatha/applets/netusagemonitor@sagarmatha.org/: applet.js  changelog.txt  helpfile.txt  metadata.json
files/usr/share/sagarmatha/applets/network@sagarmatha.org/: applet.js  metadata.json
files/usr/share/sagarmatha/applets/notifications@sagarmatha.org/: metadata.json
files/usr/share/sagarmatha/applets/panel-launchers@sagarmatha.org/: applet.js  metadata.json
files/usr/share/sagarmatha/applets/power@sagarmatha.org/: applet.js  metadata.json
files/usr/share/xsessions/: sagarmatha.desktop  sagarmatha2d.desktop
js/: Makefile.am
js/misc/: config.js.in  docInfo.js  modemManager.js  screenSaver.js
js/perf/: core.js
js/ui/: appFavorites.js  applet.js  appletManager.js  automountManager.js  backgroundManager.js  boxpointer.js  checkBox.js  desklet.js  deskletManager.js  dnd.js  edgeFlip.js  environment.js  expo.js  expoThumbnail.js  extension.js  hotCorner.js  keybindings.js  keyboard.js  layout.js  link.js  lookingGlass.js  lookingGlassDBus.js  magnifier.js  magnifierDBus.js  main.js  messageTray.js  modalDialog.js  notificationDaemon.js  overview.js  panel.js  panelMenu.js  placesManager.js  popupMenu.js  radioButton.js  runDialog.js  sagarmathaDBus.js  sagarmathaMountOperation.js  scripting.js  search.js  settings.js  (+9 more)
js/ui/appSwitcher/: appSwitcher.js  appSwitcher3D.js  classicSwitcher.js
m4/: gettext.m4  lib-link.m4
man/: Makefile.am  sagarmatha-extension-tool.1  sagarmatha-launcher.1  sagarmatha-menu-editor.1  sagarmatha-settings.1  sagarmatha.1  sagarmatha2d.1
po/: POTFILES.in  POTFILES.skip  README
src/: Makefile-hotplug-sniffer.am  Makefile.am  main.c  run-js-test.c  sagarmatha-a11y.c  sagarmatha-a11y.h  sagarmatha-app-private.h  sagarmatha-app-system-private.h  sagarmatha-app-system.c  sagarmatha-app-system.h  sagarmatha-app.c  sagarmatha-app.h  sagarmatha-arrow.c  sagarmatha-arrow.h  sagarmatha-doc-system.c  sagarmatha-doc-system.h  sagarmatha-embedded-window-private.h  sagarmatha-embedded-window.c  sagarmatha-embedded-window.h  sagarmatha-enum-types.c.in  sagarmatha-enum-types.h.in  sagarmatha-extension-tool.in  sagarmatha-generic-container.c  sagarmatha-generic-container.h  sagarmatha-global-private.h  sagarmatha-global.c  sagarmatha-global.h  sagarmatha-gtk-embed.c  sagarmatha-gtk-embed.h  sagarmatha-jhbuild.in  sagarmatha-jsapi-compat-private.h  sagarmatha-mount-operation.c  sagarmatha-mount-operation.h  sagarmatha-perf-helper.c  sagarmatha-perf-log.c  sagarmatha-perf-log.h  sagarmatha-plugin.c  sagarmatha-recorder-src.c  sagarmatha-recorder-src.h  sagarmatha-recorder.c  (+24 more)
src/hotplug-sniffer/: hotplug-sniffer.c  org.Sagarmatha.HotplugSniffer.service.in  sagarmatha-mime-sniffer.c  sagarmatha-mime-sniffer.h
src/st/: st-background-effect.c  st-im-text.c  st-scroll-view.c  st-texture-cache.c  st-theme.c
tests/: run-test.sh.in
tests/interactive/: scroll-view-sizing.js
tests/testcommon/: test.css  ui.js
tools/: check-for-missing.py
(+62 files in other folders)
